[T] init template from https://github.com/CanopyTax/single-spa-examples

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,12 @@ typings/
 # dotenv environment variables file
 .env
 
+node_modules/
+bower_components/
+jspm_packages/
+.DS_Store
+npm-debug.log
+*.bundle.js
+*.bundle.js.map
+build/
+.idea
